Refactor GameEngineFactory
1. Inline useless variables initialisation
2. Add sorting of the impls, as they're taken from Set
3. Change extra calcs to lower