@@ -3,10 +3,8 @@ package org.example.runner;
 import org.example.logic.api.GameEngine;
 import org.reflections.Reflections;
 
-import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
-import java.util.Set;
-import java.util.stream.Collectors;
 
 public class GameEngineFactory {
 
@@ -16,10 +14,11 @@ public class GameEngineFactory {
         Reflections reflections = new Reflections(
                 "org.example.impl"
         );
-
-        Set<Class<? extends GameEngine>> impls = reflections.getSubTypesOf(GameEngine.class);
-
-        IMPLEMENTATIONS = new ArrayList<>(impls);
+        IMPLEMENTATIONS = reflections.getSubTypesOf(GameEngine.class).
+                stream()
+                .sorted(Comparator.comparing(clazz ->
+                        Integer.parseInt(clazz.getSimpleName().replaceAll("\\D", ""))))
+                .toList();
     }
 
     public static GameEngine create(int index) {
@@ -33,6 +32,6 @@ public class GameEngineFactory {
     public static List<String> getImplementationNames() {
         return IMPLEMENTATIONS.stream()
                 .map(Class::getSimpleName)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
